feat: permit2 local copy for deployment and customisation

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-FORK_URL=
+PERMIT2_DEPLOYER_KEY=''
+
+# needed for foundry tests with fork on mainnets
+POLYGON_RPC=''
+ETHEREUM_RPC=''
+ARBITRUM_RPC=''
+OPTIMISM_RPC=''
+BSC_RPC=''
+AURORA_RPC=''
+FANTOM_RPC=''
